--- a/学生管理系统.md
+++ b/学生管理系统.md
@@ -34,6 +34,8 @@
     - ✅ 管理员可以为不同角色分配对不同模块（菜单、API接口）的访问权限。
         
     - ✅ 细粒度权限控制（学生、班级、课程、成绩、考勤等模块的读写权限）。
+
+    - ✅ 动态权限配置：管理员可在前端界面配置角色权限。
         
 - **登录与认证**: ✅ 已实现
     
@@ -41,7 +43,11 @@
         
     - ✅ 后端提供路由守卫（中间件）以保护需要授权的 API。
         
+    - ✅ 后端提供路由守卫（中间件）以保护需要授权的 API。
+        
     - ✅ 前端路由守卫，自动登出（token过期）。
+
+    - ✅ 个人中心：支持修改密码。
         
 - **统计分析**: ✅ 已实现
     
@@ -136,7 +142,9 @@
         
     - ✅ 考勤统计（出勤率、缺席率等）。
         
-    - ⏳ 按班级、按时间范围统计（待完善）。
+    - ✅ 考勤统计（出勤率、缺席率等）。
+        
+    - ✅ 按班级、按时间范围统计（已实现基础统计页面）。
     
 
 ### 2.5. 学生奖惩管理 (对应要求 4) ✅ 已实现
