--- a/图/详细类图.md
+++ b/图/详细类图.md
@@ -1,65 +1,95 @@
 ```mermaid
 classDiagram
-    direction LR
+    direction TB
 
+    %% ---------------------------------------------------------
+    %% Controller 层 (逻辑层)
+    %% ---------------------------------------------------------
+    class AuthController {
+        +Login()
+        +GetCurrentUser()
+    }
+    class StudentController {
+        +GetStudents()
+        +GetStudent()
+        +CreateStudent()
+        +UpdateStudent()
+        +DeleteStudent()
+    }
+    class CourseController {
+        +GetCourses()
+        +GetCourse()
+        +CreateCourse()
+        +UpdateCourse()
+        +DeleteCourse()
+    }
+    class GradeController {
+        +GetGrades()
+        +CreateGrade()
+        +UpdateGrade()
+        +DeleteGrade()
+    }
+
+    %% ---------------------------------------------------------
+    %% Entity 层 (数据层)
+    %% ---------------------------------------------------------
     class User {
-        +string Username 用户名
-        +string Password 密码
-        +uint RoleID 角色ID
-        +bool IsActive 是否激活
-        +Login(username, password) 登录
-        +GetCurrentUser(token) 获取当前用户
-        +AdminCreateUser(data) 管理员创建用户
-        +AdminUpdateUser(id, data) 管理员更新用户
-        +AdminDeleteUser(id) 管理员删除用户
-        +AdminListUsers(params) 管理员列出用户
+        +uint ID
+        +string Username
+        +string Password
+        +uint RoleID
+        +bool IsActive
+        +uint UserID
+        +string UserType
     }
-
     class Student {
-        +string Name 姓名
-        +string StudentID 学号
-        +string Gender 性别
-        +int Age 年龄
-        +string Email 邮箱
-        +string Phone 电话
-        +string Address 地址
-        +uint ClassID 班级ID
-        +GetStudents(params) 获取学生列表
-        +GetStudent(id) 获取学生信息
-        +CreateStudent(data) 创建学生
-        +UpdateStudent(id, data) 更新学生
-        +DeleteStudent(id) 删除学生
+        +uint ID
+        +string Name
+        +string StudentID
+        +string Gender
+        +int Age
+        +string Email
+        +string Phone
+        +string Address
     }
-    
     class Course {
-        +string CourseName 课程名称
-        +uint TeacherID 教师ID
-        +float64 Credits 学分
-        +GetCourses(params) 获取课程列表
-        +GetCourse(id) 获取课程信息
-        +CreateCourse(data) 创建课程
-        +UpdateCourse(id, data) 更新课程
-        +DeleteCourse(id) 删除课程
+        +uint ID
+        +string CourseName
+        +uint TeacherID
+        +float64 Credits
     }
-
     class Grade {
-        +uint EnrollmentID 选课ID
-        +string ScoreType 成绩类型
-        +float64 Score 分数
-        +CreateGrade(data) 创建成绩
-        +GetGrades(params) 获取成绩列表
-        +GetGradesByStudent(studentId) 按学生获取成绩
-        +GetGradesByCourse(courseId) 按课程获取成绩
+        +uint ID
+        +uint StudentID
+        +uint CourseID
+        +string ScoreType
+        +float64 Score
     }
 
-    User "1" --> "0..*" Student : 管理
-    User "1" --> "0..*" Course : 管理
-    User "1" --> "0..*" Grade : 管理
-    Student "1" --> "0..*" Grade : 通过选课关联
-    Course "1" --> "0..*" Grade : 通过选课关联
+    %% ---------------------------------------------------------
+    %% 关系定义
+    %% ---------------------------------------------------------
+    AuthController ..> User : uses
+    StudentController ..> Student : uses
+    CourseController ..> Course : uses
+    GradeController ..> Grade : uses
+    GradeController ..> Student : check
+    GradeController ..> Course : check
 
+    User "1" --> "1" Student : 关联
+    Student "1" --> "0..*" Grade : 拥有
+    Course "1" --> "0..*" Grade : 包含
+
+    %% ---------------------------------------------------------
+    %% 应用样式 (必须在最后定义)
+    %% ---------------------------------------------------------
+    style AuthController fill:#bbdefb,stroke:#1565c0,stroke-width:3px
+    style StudentController fill:#ce93d8,stroke:#6a1b9a,stroke-width:3px
+    style CourseController fill:#ffcc80,stroke:#ef6c00,stroke-width:3px
+    style GradeController fill:#a5d6a7,stroke:#2e7d32,stroke-width:3px
+    
     style User fill:#e1f5ff,stroke:#01579b,stroke-width:2px
     style Student fill:#f3e5f5,stroke:#4a148c,stroke-width:2px
-    style Course fill:#e8f5e9,stroke:#1b5e20,stroke-width:2px
+    style Course fill:#fff3e0,stroke:#e65100,stroke-width:2px
     style Grade fill:#e8f5e9,stroke:#1b5e20,stroke-width:2px
 ```
