--- a/修改要求.md
+++ b/修改要求.md
@@ -1,36 +1,78 @@
-第二阶段：数据“看门狗” —— 成绩修改审计（Trigger）
-目标：老师在《各位同学》文档中特别提到了“安全性”。成绩是学生管理系统中最敏感的数据，绝不能被随意篡改。如果有人改了分数，必须自动记录“原分数”、“新分数”和“修改时间”。
+第三阶段：化繁为简 —— 智能报表（Views）
+目标：老师提到了“视图对性能的影响分析”。虽然视图在 MySQL 中通常不提升性能（除非是物化视图，但 MySQL 原生不支持），但它能简化复杂查询并提供逻辑独立性。
 
-亮点：这个功能完全由数据库自动完成，后端 Go 代码完全不需要写任何额外的日志逻辑。这在答辩时是一个非常好的“解耦”案例。
+我们将创建两个高级视图，直接服务于前端的“仪表盘”和“成绩单”页面。
 
 1. SQL 实现 (添加到 init.sql)
-首先，建立一个审计日志表，然后挂载一个触发器。
-
 SQL
 
--- 1. 创建成绩修改审计表
-CREATE TABLE IF NOT EXISTS grade_audit_logs (
-    id INT AUTO_INCREMENT PRIMARY KEY,
-    grade_id INT NOT NULL COMMENT '被修改的成绩记录ID',
-    old_score DECIMAL(5, 2) COMMENT '修改前分数',
-    new_score DECIMAL(5, 2) COMMENT '修改后分数',
-    updated_at DATETIME DEFAULT CURRENT_TIMESTAMP COMMENT '修改时间',
-    FOREIGN KEY (grade_id) REFERENCES grades(id) ON DELETE CASCADE
-) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4;
+-- 1. 班级成绩统计视图 (供教师端仪表盘使用)
+-- 自动计算：平均分、最高分、最低分、及格率
+CREATE OR REPLACE VIEW vw_class_performance AS
+SELECT 
+    c.id AS class_id,
+    c.class_name,
+    co.course_name,
+    t.name AS teacher_name,
+    COUNT(g.score) AS student_count,
+    ROUND(AVG(g.score), 2) AS avg_score,
+    MAX(g.score) AS max_score,
+    MIN(g.score) AS min_score,
+    -- 计算及格率 (假设 >= 60 及格)
+    CONCAT(ROUND(SUM(CASE WHEN g.score >= 60 THEN 1 ELSE 0 END) / COUNT(g.score) * 100, 1), '%') AS pass_rate
+FROM classes c
+JOIN students s ON c.id = s.class_id
+JOIN enrollments e ON s.id = e.student_id
+JOIN courses co ON e.course_id = co.id
+JOIN teachers t ON co.teacher_id = t.id
+JOIN grades g ON e.id = g.enrollment_id
+GROUP BY c.id, c.class_name, co.course_name, t.name;
 
--- 2. 创建触发器 (Trigger)
--- 动作：在更新 grades 表之前 (BEFORE UPDATE)，自动记录旧值
-DELIMITER //
+-- 2. 学生个人完整档案视图 (供学生端/导出使用)
+-- 将分散在 User, Student, Class, Parent 表的信息聚合
+CREATE OR REPLACE VIEW vw_student_full_profile AS
+SELECT 
+    s.id AS student_id,
+    s.student_id AS code,   -- 学号
+    s.name AS student_name,
+    s.gender,
+    c.class_name,
+    u.username AS login_account,
+    -- 聚合家长信息 (如果有多个家长，用逗号连接)
+    GROUP_CONCAT(CONCAT(p.relation, ':', p.name, '(', p.phone, ')') SEPARATOR '; ') AS parents_info
+FROM students s
+LEFT JOIN classes c ON s.class_id = c.id
+LEFT JOIN users u ON s.user_id = u.id
+LEFT JOIN parents p ON s.id = p.student_id
+GROUP BY s.id, s.student_id, s.name, s.gender, c.class_name, u.username;
+2. Go 后端适配 (Gorm)
+在 Go 中，你不需要为视图写复杂的 Join，直接把它当成一张只读表来查询。
 
-CREATE TRIGGER trg_audit_grade_update
-BEFORE UPDATE ON grades
-FOR EACH ROW
-BEGIN
-    -- 只有当分数确实发生变化时才记录
-    IF OLD.score != NEW.score THEN
-        INSERT INTO grade_audit_logs (grade_id, old_score, new_score, updated_at)
-        VALUES (OLD.id, OLD.score, NEW.score, NOW());
-    END IF;
-END //
+在 backend/internal/models/view_models.go (新建文件) 中定义结构体：
 
-DELIMITER ;
+Go
+
+package models
+
+// 对应 vw_class_performance 视图
+type ClassPerformanceView struct {
+    ClassID      uint    `json:"class_id" gorm:"column:class_id"`
+    ClassName    string  `json:"class_name" gorm:"column:class_name"`
+    CourseName   string  `json:"course_name" gorm:"column:course_name"`
+    TeacherName  string  `json:"teacher_name" gorm:"column:teacher_name"`
+    StudentCount int     `json:"student_count" gorm:"column:student_count"`
+    AvgScore     float64 `json:"avg_score" gorm:"column:avg_score"`
+    PassRate     string  `json:"pass_rate" gorm:"column:pass_rate"`
+}
+
+// 设定表名为视图名
+func (ClassPerformanceView) TableName() string {
+    return "vw_class_performance"
+}
+Controller 调用示例：
+
+Go
+
+// 获取某位老师的班级统计
+db.Where("teacher_name = ?", teacherName).Find(&stats)
+这就把原本要在 Go 里写的一大堆 Joins().Select().Group() 逻辑彻底消除了，代码极其清爽。
